--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head> 
 <body>
-    <h1 style="color: aqua;">Shon baron</h1>
+    <h1 style="color: rgb(64, 255, 0);">Shon baron</h1>
 <br><br><br><br>
 <img src="https://picsum.photos/200/300"> 
 <br>
